--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,44 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-light {
+  --font-weight-light: 400;
+  --font-weight-bold: 700;
+  --accent-color: #000000;
+  --main-button-text-color: #FFFFFF;
+  --contour-color: #000000;
+  --background-color: #FFFFFF;
+  --background-image: 
+    repeating-linear-gradient(to right, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
+    repeating-linear-gradient(#d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
+    linear-gradient(#e7e7e7, #1a1a1a);
+}
+
+:root.theme-dark {
+  --font-weight-light: 465;
+  --font-weight-bold: 785;
+  --accent-color: #00CC14;
+  --main-button-text-color: #00CC14;
+  --contour-color: #00CC14;
+  --background-color: #000000;
+  --background-image: 
+    repeating-linear-gradient(to right, #000000, #000000 2px, transparent 2px, transparent 4px),
+    repeating-linear-gradient(#000000, #000000 2px, transparent 2px, transparent 4px),
+    linear-gradient(#007f0c, #004306);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --font-weight-light: 465;
+    --font-weight-bold: 785;
+    --accent-color: #00CC14;
+    --main-button-text-color: #00CC14;
+    --contour-color: #00CC14;
+    --background-color: #000000;
+    --background-image: 
+    repeating-linear-gradient(to right, #000000, #000000 2px, transparent 2px, transparent 4px),
+    repeating-linear-gradient(#000000, #000000 2px, transparent 2px, transparent 4px),
+    linear-gradient(#007f0c, #004306);
+  }
+}
