--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,16 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --main-font: "Inter-Variable", sans-serif;
+  --font-weight-light: 400;
+  --font-weight-bold: 700;
+  --accent-font: "PressStart2P", monospace;
+  --accent-color: #000000;
+  --main-button-text-color: #FFFFFF;
+  --contour-color: #000000;
+  --heart-color: red;
+  --background-color: #FFFFFF;
+  --background-image: 
+    repeating-linear-gradient(to right, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
+    repeating-linear-gradient(#d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
+    linear-gradient(#e7e7e7, #1a1a1a);
+}
