правки после ревью

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,7 +3,7 @@
   --main-font: "Inter-Variable", sans-serif;
   --font-weight-light: 400;
   --font-weight-bold: 700;
-  --accent-font: "PressStart2P", monospace;
+  --accent-font: "PressStart2P", sans-serif;
   --accent-color: #000000;
   --main-button-text-color: #FFFFFF;
   --contour-color: #000000;
