--- a/styles/style.css
+++ b/styles/style.css
@@ -96,7 +96,7 @@
   transition: opacity 0.3s ease;
 }
 
-.theme-menu__button:hover  {
+.theme-menu__button:hover {
   opacity: 0.6;
 }
 
@@ -126,20 +126,20 @@
 }
 
 .theme-menu__button::after {
-  content: '';
-    display: block;
-    position: absolute;
-    inset-inline-start: 0;
-    inset-block-end: 0;
-    width: 0%;
-    height: 2px;
-    background-color: var(--accent-color);
-    transition: width 0.3s ease;
-    transform-origin: 0%;
+  content: "";
+  display: block;
+  position: absolute;
+  inset-inline-start: 0;
+  inset-block-end: 0;
+  width: 0%;
+  height: 2px;
+  background-color: var(--accent-color);
+  transition: width 0.3s ease;
+  transform-origin: 0%;
 }
 
 .theme-menu__button:focus-visible::after {
-    width: 100%;
+  width: 100%;
 }
 
 .main-content {
@@ -168,31 +168,31 @@
 
 .brightness {
   filter: brightness(200%);
-} 
+}
 
 .grayscale {
   filter: grayscale(80%);
 }
 
 .sepia {
-  filter: sepia(80%)
+  filter: sepia(80%);
 }
 
 .saturate-hue-rotate {
-  filter: saturate(80%) hue-rotate(300deg)
-} 
+  filter: saturate(80%) hue-rotate(300deg);
+}
 
 .invert {
   filter: invert(1);
 }
 
 .blur {
-    filter: blur(3.2rem);
-} 
+  filter: blur(3.2rem);
+}
 
 .contrast {
   filter: contrast(150%);
-} 
+}
 
 .watermark {
   position: absolute;
@@ -201,22 +201,22 @@
   inset-inline-end: clamp(13px, 3.7%, 25px);
   font-family: var(--accent-font);
   font-size: 14px;
-  text-shadow:
-    -1px 0 var(--background-color), 
-    0 1px var(--background-color), 
-    1px 0 var(--background-color), 
-    0 -1px var(--background-color);
+  text-shadow: -1px 0 var(--background-color), 0 1px var(--background-color),
+    1px 0 var(--background-color), 0 -1px var(--background-color);
   mix-blend-mode: hard-light;
   opacity: 0.5;
 }
 
-@supports((text-stroke: 1px var(--background-color)) or (-webkit-text-stroke: 1px var(--background-color))) {
+@supports (
+  (text-stroke: 1px var(--background-color)) or
+    (-webkit-text-stroke: 1px var(--background-color))
+) {
   .watermark {
-      -webkit-text-stroke: 1px var(--background-color);
-      text-stroke: 1px var(--background-color);
-      text-shadow: none;
+    -webkit-text-stroke: 1px var(--background-color);
+    text-stroke: 1px var(--background-color);
+    text-shadow: none;
   }
-} 
+}
 
 .image {
   box-sizing: border-box;
@@ -258,7 +258,7 @@
 }
 
 .card__icon-button:focus {
-outline: none;
+  outline: none;
 }
 
 .card__icon-button:focus-visible {
@@ -339,6 +339,10 @@ outline: none;
   background-color: var(--background-color);
   border: 2px solid var(--accent-color);
   cursor: pointer;
+  padding-inline-start: 17px;
+  padding-inline-end: 17px;
+  padding-block-start: 13px;
+  padding-block-end: 13px;
 }
 
 .button::after {
@@ -351,21 +355,21 @@ outline: none;
   background-color: var(--accent-color);
   transition: inline-size 0.5s ease-in-out;
   transform-origin: 0;
-} 
+}
 
 .button:hover::after {
   inline-size: 100%;
-} 
+}
 
 .button:focus {
   outline: none;
-} 
+}
 
 .button:focus-visible {
   outline: none;
   box-shadow: 2px 2px 0px 0px var(--accent-color);
   transition: box-shadow 0.3s ease;
-} 
+}
 
 .card__like-button {
   inline-size: 130px;
@@ -381,10 +385,6 @@ outline: none;
 }
 
 .save-button {
-  padding-inline-start: 17px;
-  padding-inline-end: 17px;
-  padding-block-start: 13px;
-  padding-block-end: 13px;
   align-self: center;
 }
 
@@ -433,7 +433,7 @@ outline: none;
 
 .dialog::backdrop {
   background-color: rgb(0 0 0 / 0.75);
-} 
+}
 
 .dialog:not([open]) {
   pointer-events: none;
@@ -467,4 +467,3 @@ outline: none;
     padding-inline-end: 42px;
   }
 }
-
