--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@
   gap: 100px;
   font-family: var(--main-font);
   font-size: 18px;
-  font-weight: var(--font-weight-light);
+  font-variation-settings: "wght" var(--font-weight-light);
   line-height: normal;
   min-inline-size: 320px;
   min-block-size: 100dvb;
@@ -152,7 +152,7 @@
 .card__title {
   font-family: inherit;
   font-size: inherit;
-  font-weight: var(--font-weight-bold);
+  font-variation-settings: "wght" var(--font-weight-bold);
   line-height: 1.21em;
   border-block-end: 2px solid var(--accent-color);
   padding-block-start: 4px;
@@ -265,69 +265,6 @@
   outline: 2px solid var(--accent-color);
   outline-offset: -1px;
   transition: outline 0.3s ease;
-}
-
-.main-body {
-  fill: transparent;
-  transition: fill 0.3s linear;
-}
-
-.core {
-  color: transparent;
-  transition: fill 0.3s 0.03s linear;
-}
-
-.contour {
-  fill: var(--contour-color);
-  transition: fill 0.1s linear;
-}
-
-.sparks {
-  opacity: 0;
-}
-
-.like-icon:hover .main-body {
-  fill: var(--contour-color);
-  transition: fill 0.3s 0.05s linear;
-}
-
-.like-icon:hover .core {
-  fill: var(--contour-color);
-  transition: fill 0.3s linear;
-}
-
-.like-icon:active .main-body {
-  fill: var(--heart-color);
-  transition: fill 0.3s 0.05s linear;
-}
-
-.like-icon:active .core {
-  fill: var(--heart-color);
-  transition: fill 0.3s linear;
-}
-
-.like-icon.is-liked .main-body {
-  fill: var(--heart-color);
-  transition: fill 0.3s 0.05s linear;
-}
-
-.like-icon.is-liked .core {
-  fill: var(--heart-color);
-  transition: fill 0.3s linear;
-}
-
-.like-icon.is-liked .contour {
-  fill: var(--heart-color);
-  transition: fill 0.3s 0.06s linear;
-}
-
-.like-icon.is-liked .heart {
-  animation: heart 0.3s 0.1s ease-in alternate;
-  transform-origin: 50% 50%;
-}
-
-.like-icon.is-liked .sparks {
-  animation: sparks 0.3s 0.3s ease-in alternate;
 }
 
 .button {
